fixed wrap line bug at .breadcrumbs

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -275,7 +275,7 @@
 				border-radius: 3px
 				z-index: -1
 
-		&:last-child
+		&:nth-child(3)
 			@media screen and (max-width: $media-sm)
 				padding-right: 15px
 				flex-basis: 100%
@@ -1552,6 +1552,7 @@
 
 .block-any-questions
 	margin-top: 95px
+	margin-bottom: 32px
 	
 
 	@media screen and (max-width: $media-lg)
